...
          <CustomText
            localize
            style={{
              textAlign: "center",
              color: design["Header_Title_Primary_Color"],
            }}
            testID={"outletHeading"}
          >
            {category.display_name}
          </CustomText>
          <CustomText
            localize
            style={{
...
            {travelLocation?.name || location?.name || "Abu Dubai"}
          </CustomText>
        </View>

        <View style={{ position: "absolute", left: 15 }}>
          <TouchableOpacity
            testID="backButton"
            onPress={onPressBack}
            style={{
              paddingRight: 15,
              paddingTop: 10,
              paddingBottom: 15,
              paddingLeft: 5,
...
