...
import { margin, paddingHorizontal } from "@utils/genericStyles";
import AppConfig, { DragnDropLayout } from "@fast_track/src/AppConfig.json";
import { SCREEN_WIDTH } from "@commons/constants/constants";
import LayoutButton from "@HybridComponents/LayoutButton";
import { homeCategory } from "@Home/BL/Interfaces";

const Categories = React.memo(
  ({
    categories_section,
    onCategoryClickHandler,
    title,
    testID = "categories",
  }: homeCategory) => {
    const [sections, updateSections] = useState(
      categories_section?.tiles || []
    );

    // cDM
...
