import homeSections from "./HomeBL";
import getLocationList from "./GetLocationListBL";

const HomeBL = {
  homeSections,
  getLocationList,
};

export default HomeBL;
