...
  }

  render() {
    const { dataString, isVisible, hide } = this.props;
    return isVisible ? (
      <Portal>
        <View style={styles.centeredView} testID="resetEmailSuccessModal">
          <View style={styles.modalView}>
            <Image style={styles.doneImg} source={doneImg} />
            <Text style={styles.sureText}>{dataString}</Text>

            <BorderButton
              testID="resetSuccessDone"
              onPress={hide}
              style={styles.button}
              textStyle={{ color: design["Text_Tertiary_Color"] }}
              title={i18n.t("Ok")}
            />
          </View>
...
