...
  route,
}: ScreenTypes.OutletTabProps) => {
  // states

  //refrences
  const mapRef = useRef<MAP_REF>(null);
  const skipMode = useAppSelector((state) => state.appReducer?.skipMode);

  const dispatch = useDispatch(); // dispatch action to reducer
  //actions
  const onGetCountryListRequest = (data: any) =>
    dispatch(getCountryListRequest(data));
  const onSetAppLoading = (loading: Boolean) =>
...
